# unipac

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  components.json  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
src/: App.vue  components.d.ts  index.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  lib.rs  logging.rs  main.rs  models.rs  registry.rs
src-tauri/src/adapters/: brew.rs  cargo.rs  mod.rs  npm.rs  pip.rs
src/app/: AppShell.vue
src/components/common/: EmptyState.vue  GlobalLoadingBar.vue  ManagerPill.vue  StatusNotice.vue  TitleBar.vue
src/components/navigation/: AppSidebar.vue
src/components/ui/: Badge.vue  Button.vue  Input.vue
src/components/ui/alert/: Alert.vue  AlertDescription.vue  AlertTitle.vue
src/components/ui/badge/: Badge.vue
src/components/ui/button/: Button.vue
src/components/ui/button-group/: ButtonGroup.vue
src/components/ui/card/: Card.vue  CardDescription.vue  CardTitle.vue
src/components/ui/dialog/: DialogContent.vue  DialogDescription.vue  DialogFooter.vue  DialogHeader.vue  DialogOverlay.vue  DialogPortal.vue  DialogTitle.vue  DialogTrigger.vue  index.ts
src/components/ui/dropdown-menu/: DropdownMenuCheckboxItem.vue  (+8 more)
src/composables/: useLoadingBar.ts  useManagers.ts  useTheme.ts
src/i18n/: index.ts  messages.ts
src/layouts/: MainLayout.vue
src/lib/: api.ts  format.ts
src/model/: types.ts
src/pages/: Packages.vue  Search.vue  Settings.vue
src/router/: index.ts
src/styles/: global.css
(+11 files in other folders)
